--- a/examples.ipynb
+++ b/examples.ipynb
@@ -314,6 +314,250 @@
     "A = Matrix(3, 3, [21, 20, 7, 3, 6, 2, 11, 15, 7])\n",
     "print(f\"The eigenvalues of A are = {A.eig()}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For any  complex matrix $\\mathrm{A}$, the conjugate matrix $\\overline{\\mathrm{A}}$ can be obtained with `conjugate()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "4x4 Matrix at 0x21927836180\n",
+      "-----------------------------\n",
+      "0.63+0.00j\t0.30+0.00j\t0.90+0.00j\t0.76+0.00j\n",
+      "0.91+0.00j\t0.40-1.00j\t0.30+0.00j\t0.13-1.00j\n",
+      "0.15-1.00j\t0.06+0.00j\t0.45-1.00j\t0.83-1.00j\n",
+      "0.12+0.00j\t0.40+0.00j\t0.46+0.00j\t0.89+0.00j\n",
+      "\n",
+      "Conjugate of A\n",
+      "4x4 Matrix at 0x21927496720\n",
+      "-----------------------------\n",
+      "0.63-0.00j\t0.30-0.00j\t0.90-0.00j\t0.76-0.00j\n",
+      "0.91-0.00j\t0.40+1.00j\t0.30-0.00j\t0.13+1.00j\n",
+      "0.15+1.00j\t0.06-0.00j\t0.45+1.00j\t0.83+1.00j\n",
+      "0.12-0.00j\t0.40-0.00j\t0.46-0.00j\t0.89-0.00j\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = Matrix(\n",
+    "    4,\n",
+    "    4,\n",
+    "    [complex(random.random(), random.randrange(-1, 1)) for _ in range(4 * 4)],\n",
+    ")\n",
+    "print(\"A\")\n",
+    "print(A)\n",
+    "\n",
+    "print(\"Conjugate of A\")\n",
+    "print(A.conjugate())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The QR decomposition of a matrix can be obtained with `qr_decomposition()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "3x3 Matrix at 0x21927835880\n",
+      "-----------------------------\n",
+      "21.00\t20.00\t7.00\n",
+      "3.00\t6.00\t2.00\n",
+      "11.00\t15.00\t7.00\n",
+      "\n",
+      "Q\n",
+      "3x3 Matrix at 0x21927455d60\n",
+      "-----------------------------\n",
+      "-0.88\t0.44\t0.18\n",
+      "-0.13\t-0.58\t0.81\n",
+      "-0.46\t-0.69\t-0.56\n",
+      "\n",
+      "R\n",
+      "3x3 Matrix at 0x219278370e0\n",
+      "-----------------------------\n",
+      "-23.90\t-25.23\t-9.63\n",
+      "0.00\t-4.92\t-2.87\n",
+      "0.00\t0.00\t-1.06\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = Matrix(3, 3, [21, 20, 7, 3, 6, 2, 11, 15, 7])\n",
+    "print(\"A\")\n",
+    "print(A)\n",
+    "Q, R = A.qr_decomposition()\n",
+    "print(\"Q\")\n",
+    "print(Q)\n",
+    "\n",
+    "print(\"R\")\n",
+    "print(R)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The library also has a method for reducing a matrix to an upper Hessenberg form."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `Vector`\n",
+    "\n",
+    "Initialize with a list of entries for the vector."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4-dim Vector at 0x21927495e20: < 1.00   2.00   3.00   4.00  >\n"
+     ]
+    }
+   ],
+   "source": [
+    "# without any arguments\n",
+    "print(Vector([1, 2, 3, 4]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For any two vectors $a$ and $b$ of the same dimensions, perform dot procuct $a \\cdot b$ with the `dot()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4-dim Vector at 0x219274eadb0: < 0.00  -5.00   1.00   9.00  >\n",
+      "4-dim Vector at 0x219274aee10: <-10.00  -9.00  -7.00   3.00  >\n",
+      "a • b = 65\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = Vector([random.randint(-10, 10) for _ in range(4)])\n",
+    "print(a)\n",
+    "b = Vector([random.randint(-10, 10) for _ in range(4)])\n",
+    "print(b)\n",
+    "print(f\"a • b = {a.dot(b)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A `Matrix` can be multiplied with a `Vector`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3-dim Vector at 0x219274aee10: < 92.00  -96.00   68.00  >\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = Matrix(3, 3, [random.randint(-10, 10) for _ in range(3 * 3)])\n",
+    "b = Vector([random.randint(-10, 10) for _ in range(3)])\n",
+    "\n",
+    "print(A * b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For a vector $x$, its 2-norm $\\|x\\|_2$ can be obtained with the `norm()` method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3-dim Vector at 0x21926d78e60: < 8.00   1.00  -9.00  >\n",
+      "Norm of the vector x = 12.08\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = Vector([random.randint(-10, 10) for _ in range(3)])\n",
+    "print(x)\n",
+    "print(f\"Norm of the vector x = {x.norm():.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A vector can be normalized with the `normalize()` method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized x\n",
+      "3-dim Vector at 0x21927455d60: < 0.66   0.08  -0.74  >\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Normalized x\")\n",
+    "print(x.normalize())"
+   ]
   }
  ],
  "metadata": {
