--- a/examples.ipynb
+++ b/examples.ipynb
@@ -433,19 +433,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4-dim Vector at 0x21927495e20: < 1.00   2.00   3.00   4.00  >\n"
+      "4-dim Vector at 0x21927835b80: < 1.00   2.00   3.00   4.00  >\n"
      ]
     }
    ],
    "source": [
-    "# without any arguments\n",
     "print(Vector([1, 2, 3, 4]))"
    ]
   },
